tests/ui/impl-trait/recursive-generator.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-generator.rs:5:13
   |
LL | fn foo() -> impl Generator<Yield = (), Return = ()> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive opaque type
...
LL |         let mut gen = Box::pin(foo());
   |             ------- generator captures itself here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
